--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieRental.ViewModels.CustomerListViewModel
+﻿@model IEnumerable<MovieRental.Models.Customer>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,23 +11,18 @@
         <tr>
             <th>Customer</th>
         </tr>
-        @if (Model.Customers.Count < 1)
-        {
-            <p>We don't have any customers yet!</p>
-        }
-        else
-        {
+       
 
-            foreach (var customer in Model.Customers)
+            @foreach (var customer in Model)
             {
-                <tr>
+    <tr>
 
 
-                    <td>@Html.ActionLink(customer.Name, "Details", new { id = customer.Id })</td>
-
-
-                </tr>
+        @*//<td>@Html.ActionLink(customer.Name, "Details", customer.Id)</td>*@
+        @*<td>@Html.ActionLink(customer.Name, "Details", "Customers", new { Id = customer.Id })</td>*@
+        <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { customerId= customer.Id },null)</td>
+    </tr>
             }
-        }
+         
     </thead>
 </table>
