Exercise 3: Movie database is connected to the MVC and all working perfectly.

--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -14,6 +14,6 @@
 <ul>
     <li>Membership Type: @Model.MembershipType.Name </li>
 
-    <li class="@displayBirth">Birthdate: @Model.BirthDate</li>
+    <li class="@displayBirth">Birthdate: @Model.BirthDate.Value.ToString("D")</li>
 
 </ul>
