--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -7,3 +7,11 @@
 <h2>Details</h2>
 
 <h3>@Model.Name</h3>
+ 
+<ul>
+    <li>Genre: @Model.Genre.Name</li>
+    <li>Release Date: @Model.ReleaseDate.ToString("D")</li>
+    <li>Date Added: @Model.DateAdded.ToString("D")</li>
+    <li>Number In Stock: @Model.NumberInStock</li>
+</ul>
+  
