--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Movies</h2>
 
+@Html.ActionLink("New Movie","New",null, new { @class="btn btn-primary"} ) 
+
 <table border="1">
     <thead>
         <tr>
