--- a/Content/Site.css
+++ b/Content/Site.css
@@ -23,4 +23,16 @@ textarea {
     max-width: 280px;
 }
 
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 2px solid red;    
+}
+
+.validation-summary-errors{
+    color: red;
+}
+
 
